--- a/requirements.txt
+++ b/requirements.txt
@@ -29,6 +29,7 @@ google-api-python-client>=2.154.0
 google-auth>=2.35.0
 google-auth-httplib2>=0.2.0
 google-generativeai>=0.8.3
+google-genai>=0.2.0
 google-search-results>=2.4.2
 serpapi>=0.1.5
 googleapis-common-protos>=1.65.0
@@ -116,4 +117,5 @@ PyMySQL
 redis>=5.0.0
 openpyxl
 pymongo>=4.6.0
-
+python-docx>=1.1.0
+easyocr>=1.7.0
